# RealTimeController

./: .gitattributes  CMakeLists.txt  README.md  vcpkg.json
prototyping/: simple_shared_memory_example.cpp  test_shared_memory_only_creator.cpp
src/: client.cpp  compiler.cpp  header_acessor.h  header_creator.h  sensors.cpp  sensors_utilities.h  sharedmemory.json  simplified_sensors.cpp  watchdog.cpp
